Makefile: Don't generate update package for legacy flash boards
The only purpose of legacy flash boards is to be flashed over vendor
firmware using an exploit, to then flash non-maximized Heads firmware.

They are never upgraded to another legacy flash build, and they move
the coreboot ROM from the build directory, so don't build an update
package for those boards.

Signed-off-by: Jonathon Hall <jonathon.hall@puri.sm>

--- a/boards/x230-legacy-flash/x230-legacy-flash.config
+++ b/boards/x230-legacy-flash/x230-legacy-flash.config
@@ -31,6 +31,8 @@ export CONFIG_BOOTSCRIPT=/bin/xx30-flash.init
 export CONFIG_BOARD_NAME="ThinkPad X230-legacy-flash"
 export CONFIG_FLASHROM_OPTIONS="--force --noverify-all -p internal --ifd --image bios"
 
+CONFIG_LEGACY_FLASH=y
+
 # This board is "special" in that we need a 4MB top SPI flashable ROM.
 # This is enough to allow the board to boot into a minimal Heads and read the full Legacy
 # ROM from an external USB media.
